<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:layout_marginTop="2dp"
    android:maxHeight="500dp"
    tools:context="com.example.brysongood.brysonapp.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/title1"
            android:layout_width="338dp"
            android:layout_height="17dp"
            android:ems="10"
            android:selectAllOnFocus="false"
            android:text="@string/title1"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1"
            android:layout_marginLeft="1dp"
            android:layout_marginStart="1dp" />

        <TextView
            android:id="@+id/body2"
            android:layout_width="339dp"
            android:layout_height="68dp"
            android:ems="10"
            android:text="@string/body2"
            android:textAlignment="textStart"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="269dp"
            android:layout_marginStart="0dp"
            android:layout_marginRight="-35dp" />

        <TextView
            android:id="@+id/title3"
            android:layout_width="339dp"
            android:layout_height="25dp"
            android:ems="10"
            android:text="@string/title3"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginLeft="1dp"
            tools:layout_constraintTop_creator="1"
            app:layout_constraintBottom_toTopOf="@+id/body3"
            android:layout_marginStart="1dp"
            app:layout_constraintTop_toBottomOf="@+id/body2"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/body1"
            android:layout_width="0dp"
            android:layout_height="97dp"
            android:ems="10"
            android:text="@string/body1"
            android:textAlignment="viewStart"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="@+id/body2"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="102dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/title2"
            android:layout_width="340dp"
            android:layout_height="20dp"
            android:ems="10"
            android:text="@string/title2"
            android:textStyle="bold"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_constraintTop_creator="1"
            app:layout_constraintBottom_toTopOf="@+id/body2"
            android:layout_marginStart="1dp"
            app:layout_constraintTop_toBottomOf="@+id/body1"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/body3"
            android:layout_width="0dp"
            android:layout_height="81dp"
            android:ems="10"
            android:text="@string/body3"
            android:textAlignment="textStart"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="101dp"
            android:layout_marginBottom="86dp"
            app:layout_constraintTop_toTopOf="@+id/body2"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"/>
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
